Removed reference to "four" Uncertainty components an d fixed image with on smaller resolutions

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -164,6 +164,7 @@ table .noBorderAbove{
   margin: 0 0 20px 20px;
   border: 1px solid #000;
   float: right;
+  max-width: 100%;
 }
 
 #caseSampleDataStart small{
